--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -247,21 +247,9 @@ where $\beta_1=1$, $\beta_2=-0.5$, $X_1 \sim Bernoulli(0.5)$ and $X_2 \sim N(0,1
 
 For each model a second set of simulations was used to evaluate a mixed discrete/continuous outcome such as a lower limit of detection. For the first two models values of $Y<1$ to were set to 1 and for the third model values of $Y<0$ were set to 0. The continuous and censored outcome data based on 1. and 3. were evaluated using a Bayesian CPM with the properly specified probit and loglog links, respectively. For the data based on 2. a logit link Bayesian CPM (which implies $\varepsilon \sim Logistic(0,1)$) was used. In each of the six outcome models, three $\boldsymbol{\alpha}$ concentration hyperparameters ($1/J$, $1/(2+(J/3))$, $1/(0.8+0.35J)$) were considered for $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha})$ for a total of 18 model and prior combinations. For each combination $1,000$ datasets were generated for sample sizes $n=25,50,100,200$ and $400$.
 
-For scenario (1), we examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data, $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$. For the censored outcomes, estimates are only available for the uncensored values of $\boldsymbol{y}$. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20$^{th}$ percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
+For scenario (1), we examine the average percent bias [! change this to average bias] of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data, $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$. For the censored outcomes, estimates are only available for the uncensored values of $\boldsymbol{y}$. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20$^{th}$ percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
 
 For scenarios (2) and (3), we examine the average bias for $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters at $\boldsymbol{y}=\{y_1=e^{-0.5},y_2=e^{0},y_3=e^{0.5},y_4=e^{1},y_5=e^{1.5}\}$ for (2) and $\boldsymbol{y}=\{y_1=-0.3,y_2=0,y_3=0.5,y_4=1.5,y_5=2.5\}$ for (3).  We also calculate the average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean 20$^{th}$ percentile, and 80$^{th}$ percentile at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$.
-
-<!--
-compare using Bias, RMSE, coverage?, other statistics? 
-
-Additional sims
-
-case where likelihood not well approximated by quadratic function (ie NPMLE doesn't work well but Bayes CPM works)?
-
-weird shapes (i.e. mixture distributions); mixture continuous/discrete (lower limit of detection) - see Yuqi's paper and Song paper for ideas
-
-try more complex mix of continuous and categorical (e.g. categorical below threshold and above threshold? may not work without modified multiple detection limit likelihood)
--->
 
 ## Case Study
 
@@ -301,15 +289,26 @@ The results are similar for scenario (2) and (3) under both outcomes: larger per
 #### Mean
 !may not need sep header
 
+
+Figures \@ref(fig:simplt-mn1) and \@ref(fig:simplt-mn3) present the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. The average percent bias across was less than 5\% for all sample sizes and priors for the posterior conditional mean in the first two scenarios. For scenario (3) the average percent bias across all simulations ranged from $<-1.0$\% to -12.5\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior (fig. \@ref(fig:simplt-mn5)).
+
+In contrast, figures \@ref(fig:simplt-mn2) and \@ref(fig:simplt-mn4) show the posterior conditional mean estimates for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. A similar trend was seen in scenario (3) where a value of $Y=0$ was used to calculate the conditional mean for outcomes censored at $Y<0$ (fig \@ref(fig:simplt-mn6)).
+
+
 #### Median & other quantiles
 !may not need sep header
 
+The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med1) and \@ref(fig:simplt-med2). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. The pattern was nearly identical for scenario (2) (figs. \@ref(fig:simplt-med3) and \@ref(fig:simplt-med4)). For both outcomes under scenario (3), bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters (\@ref(fig:simplt-med5) and \@ref(fig:simplt-med6)). 
 
-### Probit link
 
-<!--
-For scenario (1), the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ are shown in figures \@ref(fig:simplt-pars1) and \@ref(fig:simplt-pars2) for the uncensored and censored outcome data, respectively. Percent bias is always largest for the smallest sample sizes, but the direction and size of the bias depends on the outcome, concentration prior and parameter of interest. For the $\beta$ parameters, the priors $\alpha=1/(0.8+0.35J)$ and $\alpha=1/(2+(J/3))$ produce less biased estimates than $\alpha=1/J$ for both outcomes. The situation is more complex for the $\gamma$ parameters. With the uncensored outcome, the $\alpha=1/J$ prior estimate is less biased for $\gamma_{y_1}$ and $\gamma_{y_2}$, but more biased for $\gamma_{y_3}$, $\gamma_{y_4}$, and $\gamma_{y_5}$; with the censored outcome, the $\alpha=1/J$ prior estimate is less biased for $\gamma_{y_3}$, but more biased for $\gamma_{y_4}$ and $\gamma_{y_5}$. Across both outcomes, the estimates of $\beta_1$ and all $\gamma$s were larger using the $\alpha=1/J$ concentration prior compared to the $\alpha=1/(0.8+0.35J)$ or $\alpha=1/(2+(J/3))$ concentration priors while the $\beta_2$ estimates were smaller with $\alpha=1/J$.
--->
+Figure \@ref(fig:simplt-q20-1) presents the results for the posterior conditional 20th percentile in the uncensored simulation data in scenario (1). The estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) (fig. \@ref(fig:simplt-q20-2)) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size.
+
+Figure \@ref(fig:simplt-q20-3) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior. The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-4)) show a similar trend as the censored outcome. 
+
+Figure \@ref(fig:simplt-q20-5) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are close to unbiased for all the priors and sample sizes. The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-6)) show small bias at $(X_1=1,X_2=0)$ with larger bias at $(X_1=1,X_2=1)$. 
+
+
+Figures \@ref(fig:simplt-q80-3) and \@ref(fig:simplt-q80-4)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figures \@ref(fig:simplt-q80-5) and \@ref(fig:simplt-q80-6)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes.
 
 ```{r simplt-pars1, fig.cap="Bias in parameters for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_a_pars_full.png"))
@@ -319,9 +318,15 @@ knitr::include_graphics(file.path(wd,"fig","sim_a_pars_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_a_pars_cens.png"))
 ```
 
-<!--
-Figures \@ref(fig:simplt-cdf1) and \@ref(fig:simplt-cdf2) show the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. For conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the othe reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes.
--->
+```{r simplt-pars3, fig.cap="Bias in parameters for uncensored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_pars_full.png"))
+```
+
+```{r simplt-pars4, fig.cap="Bias in parameters for censored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_pars_cens.png"))
+```
+
+
 
 ```{r simplt-cdf1, fig.cap="Bias in conditional CDF for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_cdf_full.png"))
@@ -333,8 +338,6 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_cdf_cens.png"))
 
 
 
-Figure \@ref(fig:simplt-mn1) presents the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$. The average percent bias across all simulations was less than 5\% for all sample sizes and priors. In contrast, \@ref(fig:simplt-mn2) shows the conditional means for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in average percent bias that is much higher than the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations.
-
 ```{r simplt-mn1, fig.cap="Bias in conditional mean for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_mn_full.png"))
 ```
@@ -343,8 +346,19 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_mn_full.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_b_mn_cens.png"))
 ```
 
+```{r simplt-mn3, fig.cap="Bias in conditional mean for uncensored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_mn_full.png"))
+```
 
-The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med1) and \@ref(fig:simplt-med2). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters.
+```{r simplt-mn4, fig.cap="Bias in conditional mean for censored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_mn_cens.png"))
+```
+
+```{r simplt-mn5, fig.cap="Bias in conditional mean for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_mn_full.png"))
+```
+
+
 
 ```{r simplt-med1, fig.cap="Bias in conditional median for uncensored simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_med_full.png"))
@@ -355,107 +369,6 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_med_cens.png"))
 ```
 
 
-Figure \@ref(fig:simplt-q20-1) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$.
-
-The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-2)) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size.
-
-```{r simplt-q20-1, fig.cap="Bias in conditional 20th percentile for uncensored simulations using probit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_b_q20_full.png"))
-```
-
-```{r simplt-q20-2, fig.cap="Bias in conditional 20th percentile for censored simulations using probit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_b_q20_cens.png"))
-```
-
-### Logit link
-
-<!--
-For scenario (2), the average bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ are shown in figures \@ref(fig:simplt-pars3) and \@ref(fig:simplt-pars4). Because the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$), the parameter estimates are not on the same scale as the parameters from the generating model.  Assume $Y^*=\beta'X + a\varepsilon$ where $a>0$ is a constant scaling factor with $\varepsilon \sim F_{\varepsilon}$, and $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze $Y$ results in estimates of $\xi=a^{-1}\beta$ for the coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased. If the estimates are adjusted using the scale factor, $a$, the bias in the parameters is close to 0 for all parameters (make fig & show). However in practice, the value of the scale factor is unknown.
-
-Similar issue with link misspecification
--->
-
-```{r simplt-pars3, fig.cap="Bias in parameters for uncensored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_pars_full.png"))
-```
-
-```{r simplt-pars4, fig.cap="Bias in parameters for censored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_pars_cens.png"))
-```
-
-<!--
-Figures \@ref(fig:simplt-cdf3) and \@ref(fig:simplt-cdf4) show the average percent bias in the posterior conditional CDF for scenario (2). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes and the concentration priors $\boldsymbol{\alpha}=1/(0.8 + 0.35J)$ and $\boldsymbol{\alpha}=1/(2 +(J/3))$. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes.
--->
-
-
-
-Figure \@ref(fig:simplt-mn3) presents the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$. The average percent bias across all simulations was less than 2.5\% for all sample sizes and priors. In contrast, \@ref(fig:simplt-mn4) shows the conditional means for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in average percent bias that is higher than the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. (Similar to probit, but percent bias is lower for uncensored outcome and much lower for censored outcome)
-
-```{r simplt-mn3, fig.cap="Bias in conditional mean for uncensored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_mn_full.png"))
-```
-
-```{r simplt-mn4, fig.cap="Bias in conditional mean for censored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_mn_cens.png"))
-```
-
-
-
-The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med3) and \@ref(fig:simplt-med4). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. [identical pattern to scenario (1) - combine!]
-
-```{r simplt-med3, fig.cap="Bias in conditional median for uncensored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_med_full.png"))
-```
-
-```{r simplt-med4, fig.cap="Bias in conditional median for censored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_med_cens.png"))
-```
-
-
-Figure \@ref(fig:simplt-q20-3) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior. The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-4)) show a similar trend as the censored outcome. 
-
-```{r simplt-q20-3, fig.cap="Bias in conditional 20th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_q20_full.png"))
-```
-
-```{r simplt-q20-4, fig.cap="Bias in conditional 20th percentile for censored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_q20_cens.png"))
-```
-
-Figures \@ref(fig:simplt-q80-3) and \@ref(fig:simplt-q80-4)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors.
-
-```{r simplt-q80-3, fig.cap="Bias in conditional 80th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_q80_full.png"))
-```
-
-```{r simplt-q80-4, fig.cap="Bias in conditional 80th percentile for censored simulations using logit link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_c_q80_cens.png"))
-```
-
-### Loglog link
-
-<!--
-For scenario (3), the average bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ are shown in figures \@ref(fig:simplt-pars5) and \@ref(fig:simplt-pars6). Bias is small for all parameters with both uncensored and censored outcomes except for the $n=25$ sample size.  The estimates using prior $\alpha=1/J$ are slightly more biased than the other concentration priors.
--->
-
-<!--
-Figures \@ref(fig:simplt-cdf5) and \@ref(fig:simplt-cdf6) show the average percent bias in the posterior conditional CDF for scenario (3). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y\le 0.5$, especially for the smallest sample sizes. Similar patterns are seen for the the censored outcome with less biased estimates for the CDF at higher $y$ values and larger sample sizes.
--->
-
-
-
-Figure \@ref(fig:simplt-mn5) presents the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$. The average percent bias across all simulations ranged from $<-1.0$\% to -12.5\% with larger bias for the $\alpha=1/J$ prior. Figure \@ref(fig:simplt-mn6) shows the conditional means for the censored data. For outcomes censored at $Y<0$, a value of $Y=0$ was used to calculate the conditional mean.
-
-```{r simplt-mn5, fig.cap="Bias in conditional mean for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_d_mn_full.png"))
-```
-
-```{r simplt-mn6, fig.cap="Bias in conditional mean for censored simulations using loglog link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_d_mn_cens.png"))
-```
-
-The results for the conditional posterior median are shown in figures \@ref(fig:simplt-med5) and \@ref(fig:simplt-med6). For both outcomes, bias in the the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. [somwhat different than scenario (1) & (2) - combine!]
-
 ```{r simplt-med5, fig.cap="Bias in conditional median for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_med_full.png"))
 ```
@@ -465,7 +378,22 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_med_cens.png"))
 ```
 
 
-Figure \@ref(fig:simplt-q20-5) presents the results for conditional 20th percentile in the uncensored simulation data. The estimates are close to unbiased for all the priors and sample sizes. The estimates of the conditional 20th percentile for the censored outcome (fig. \@ref(fig:simplt-q20-6)) show small bias at $(X_1=1,X_2=0)$ with larger bias at $(X_1=1,X_2=1)$. 
+```{r simplt-q20-1, fig.cap="Bias in conditional 20th percentile for uncensored simulations using probit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_b_q20_full.png"))
+```
+
+```{r simplt-q20-2, fig.cap="Bias in conditional 20th percentile for censored simulations using probit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_b_q20_cens.png"))
+```
+
+```{r simplt-q20-3, fig.cap="Bias in conditional 20th percentile for uncensored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_q20_full.png"))
+```
+
+```{r simplt-q20-4, fig.cap="Bias in conditional 20th percentile for censored simulations using logit link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_c_q20_cens.png"))
+```
+
 
 ```{r simplt-q20-5, fig.cap="Bias in conditional 20th percentile for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_q20_full.png"))
@@ -473,16 +401,6 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_q20_full.png"))
 
 ```{r simplt-q20-6, fig.cap="Bias in conditional 20th percentile for censored simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_q20_cens.png"))
-```
-
-Figures \@ref(fig:simplt-q80-5) and \@ref(fig:simplt-q80-6)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes.
-
-```{r simplt-q80-5, fig.cap="Bias in conditional 80th percentile for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_d_q80_full.png"))
-```
-
-```{r simplt-q80-6, fig.cap="Bias in conditional 80th percentile for censored simulations using loglog link", fig.align='center', out.width='90%'}
-knitr::include_graphics(file.path(wd,"fig","sim_d_q80_cens.png"))
 ```
 
 ### Computation time
